--- a/public/styles.css
+++ b/public/styles.css
@@ -8,19 +8,14 @@ body {
     font-family: roboto;
 }
 
-/* .home-container {
-    display: grid;
-} */
-
-.main-container {
-    /* position: relative; */
+.modal-on {
     position: fixed;
     margin: 20px;
     min-height: 100vh;
     display: flex; 
     justify-content: center;
     align-items: center; 
-    
+    visibility: hidden;
 }
 
 .bars {
@@ -35,11 +30,6 @@ body {
     cursor: pointer;
 }
 
-/* .modal-btn-contianer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-} */
 
 .modal-btn {
     text-transform: uppercase;
@@ -73,6 +63,7 @@ body {
     transition: var(--transition);
     visibility: hidden;
     z-index: -1;
+    margin: 0px;
 }
 
 .show-modal {
@@ -112,10 +103,111 @@ body {
     font-size: 1.3rem;
     background: transparent;
     border-color: transparent;
+    cursor: pointer;
+}
+
+/* sidebar */
+
+.sidebar-header {
+    /* position: static; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* padding: 1rem 1.5rem; */
+}
+
+.sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #fff;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    row-gap: 1rem;
+    box-shadow: hsl(360, 67%, 44%);
+    transition: all 0.3s linear;
+    transform: translate(-100%);
+}
+
+.show-sidebar {
+    transform: translate(0);
+}
+
+.sidebar-btn {
+    font-size: 1.3rem;
+    background: transparent;
+    border-color: transparent;
     color: #b41b44;
     cursor: pointer;
 }
 
-@media screen and (min-width: 800px) {
+.sidebar-btn:hover {
+    color: #6b0b25;
+}
 
-  }
+ul {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+img {
+    height: 40px;
+}
+
+.sidebar-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 95vh;
+}
+
+ul {
+    padding: 0.5rem;
+}
+
+.links a {
+    display: flex;
+    align-items: center;
+    font-size: 1.245rem;
+    text-transform: capitalize;
+    padding: 1rem 0rem;
+    color: rgb(81, 141, 220);
+    transition: all 0.3s linear;
+    letter-spacing: 0.1rem;
+}
+
+.links a:hover {
+    background: hsl(210, 36%, 96%);
+    color: hsl(211, 39%, 23%);
+    border-radius: 0.25rem;
+}
+
+/* .social-icons-contianer {
+    
+} */
+
+.social-icons {
+    display: flex;
+    justify-content: center;
+}
+.social-icons a {
+    display: flex;
+    padding: 0.5rem 0rem;
+    color: rgb(81, 141, 220);
+    padding-right: 0.5rem;
+}
+
+.social-icons a:hover {
+    color: hsl(211, 39%, 23%);
+}
+
+@media screen and (min-width: 800px) {
+    .sidebar {
+        width: 25%;
+    }
+}
