--- a/public/styles.css
+++ b/public/styles.css
@@ -25,7 +25,7 @@ body {
     font-size: 1.5rem;
     background: transparent;
     border-color: transparent;
-    color: rgb(69, 147, 140);
+    color: rgb(81, 141, 220);
     transition: all 0.3s linear;
     cursor: pointer;
 }
@@ -52,23 +52,14 @@ body {
 }
 
 .modal-on {
-    position: fixed;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     background: rgba(155, 154, 154, 0.5);
-    display: grid;
-    place-items: center;
-    transition: var(--transition);
-    visibility: hidden;
-    z-index: -1;
     margin: 0px;
 }
 
 .show-modal {
     visibility: visible;
-    z-index: 10;
   }
 
 .modal-container {
@@ -96,7 +87,6 @@ body {
     position: absolute;
     top: 0.5rem;
     right: 0.5rem;
-
 }
 
 .close-modal {
@@ -104,28 +94,25 @@ body {
     background: transparent;
     border-color: transparent;
     cursor: pointer;
+    color: #b41b44;
+}
+
+.close-modal:hover {
+    color: #6b0b25;
 }
 
 /* sidebar */
 
 .sidebar-header {
-    /* position: static; */
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* padding: 1rem 1.5rem; */
 }
 
 .sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     background: #fff;
-    display: grid;
-    grid-template-rows: auto 1fr auto;
-    row-gap: 1rem;
     box-shadow: hsl(360, 67%, 44%);
     transition: all 0.3s linear;
     transform: translate(-100%);
@@ -186,10 +173,6 @@ ul {
     color: hsl(211, 39%, 23%);
     border-radius: 0.25rem;
 }
-
-/* .social-icons-contianer {
-    
-} */
 
 .social-icons {
     display: flex;
